--- a/yakutsa.csproj
+++ b/yakutsa.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -17,17 +17,19 @@
   <ItemGroup>
     <PackageReference Include="Dadata" Version="21.12.0" />
     <PackageReference Include="jQuery" Version="3.6.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
     <PackageReference Include="MySql.Data" Version="8.0.28" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-    <PackageReference Include="VkNet" Version="1.68.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,6 +38,20 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\lib\popper\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\lib\owl\js\owl.animate.js" />
+    <None Include="wwwroot\lib\owl\js\owl.autoheight.js" />
+    <None Include="wwwroot\lib\owl\js\owl.autoplay.js" />
+    <None Include="wwwroot\lib\owl\js\owl.autorefresh.js" />
+    <None Include="wwwroot\lib\owl\js\owl.carousel.js" />
+    <None Include="wwwroot\lib\owl\js\owl.hash.js" />
+    <None Include="wwwroot\lib\owl\js\owl.lazyload.js" />
+    <None Include="wwwroot\lib\owl\js\owl.navigation.js" />
+    <None Include="wwwroot\lib\owl\js\owl.support.js" />
+    <None Include="wwwroot\lib\owl\js\owl.support.modernizr.js" />
+    <None Include="wwwroot\lib\owl\js\owl.video.js" />
   </ItemGroup>
 
 </Project>
