--- a/yakutsa.csproj
+++ b/yakutsa.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    <PackageReference Include="VkNet" Version="1.69.0" />
   </ItemGroup>
 
   <ItemGroup>
