--- a/yakutsa.csproj
+++ b/yakutsa.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\logs\vk_input.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dadata" Version="21.12.0" />
     <PackageReference Include="jQuery" Version="3.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.3" />
@@ -1729,6 +1733,7 @@
     <None Include="wwwroot\lib\owl\js\owl.support.js" />
     <None Include="wwwroot\lib\owl\js\owl.support.modernizr.js" />
     <None Include="wwwroot\lib\owl\js\owl.video.js" />
+    <None Include="wwwroot\logs\vk_input.txt" />
   </ItemGroup>
 
 </Project>
