--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-yakutsa-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "Develop": "server=37.77.105.24;database=yakutsa;uid=pycek;password=6m7sd38L;ConvertZeroDateTime=True"
+    "Default": "server=92.53.119.200;database=yakutsa;uid=pycek;password=6m7sd38L;ConvertZeroDateTime=True",
+    "NewDefault": "server=94.228.121.38;database=yakutsa;uid=root;password=6m7sd38L;ConvertZeroDateTime=True"
   },
   "Logging": {
     "LogLevel": {
