--- a/yakutsa.csproj
+++ b/yakutsa.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Services\OzonSellerApi\Models\" />
     <Folder Include="wwwroot\lib\popper\" />
     <Folder Include="wwwroot\lib\vibrate\" />
   </ItemGroup>
